09/09_04_ingress/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: tensor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - image: python-app
        name: python-app
        imagePullPolicy: Never
        volumeMounts:
        - name: data
          mountPath: /usr/share/nginx/html
      - image: nginx:1.12
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: data
          mountPath: /usr/share/nginx/html
      volumes:
      - name: data
        emptyDir: {}
