09/09_04_ingress/manifests/service_nginx.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: tensor
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: my-app
  type: ClusterIP
